# FIPS-IPC

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md  Requirements.md  build.sh  fips_buf.conf
cmake/: common.cmake
measurements/: bind-fips-comparison.py  clean_doca_logs.py  static-logging-comparison-nginx.py
results/: Makefile  baseline.py  baseline.tex  baseline2.py  baseline2.tex  baseline3.py  baseline3.tex  baseline4.py  baseline4.tex  block-speed.py  block-speed.tex  plot_timeseries.py  pps-to-interval.py  qos.py  qos.tex  qos_tmp.py  static-ipc-intro.py  static-ipc-intro.tex  static-ipc.py  static-ipc.tex  static-logging-nginx-1.py  static-logging-nginx-2.py  static-logging-nginx-3.py  static-logging-nginx-4.py  static-logging-nginx-5.py  static-logging-nginx-6.py  static-logging-nginx-absolut-100k-1m.py
results/data/: baseline-26060801  baseline-26060802  baseline-26060803  baseline_xdpstats_f2b_100KR_255C_240730_08.csv  file_fips3_635d3e9287784eb5a9ecab891a1f858a.csv  fips_fips3_cbf53658a95f40d1881ce2c7c49518ee.csv  results.1.csv  results.2.csv  results.250213.csv  results.250408.csv  results.250507.csv  results.250509.csv  results.3.csv  results.4.csv  results.5.csv  results.csv  results_202510102053.csv  results_202510141445.csv  results_202603111041.csv  results_202603172339.csv  results_202603201601.csv  results_202603302128.csv  results_202604011530.csv  results_202604161109.csv  results_202605051036.csv  static-ipc-1m.csv  static-ipc.csv
results/data/bluefield/: 0020bd11-51fb-4809-85e9-fc6e0c679eac.csv  003464e0-5bbb-4667-a0ef-f43f128b4821.csv  00490e06-5e0f-4289-8ae6-7275d86be9d5.csv  004c1e0f-8fda-491c-90f1-9b422e758a05.csv  005d0130-9f02-4782-aea3-62ada2a3834c.csv  008824a8-9334-48bd-97a2-e4ac9e33c18e.csv  009174fd-b321-4717-956b-cbdff15d8b1c.csv  00c387bc-67a5-46eb-be45-4fda0c18c33d.csv  00daa922-d793-48c8-b02c-55959a3d3db0.csv  00dfd716-7253-46d0-ab47-50cd0de89b50.csv  00f27173-6a82-44b6-886b-5fd7a005416c.csv  00fdaba2-0d86-43a4-9473-3552dea5f16e.csv  011c6568-af55-4236-9c6d-ba666f6f025f.csv  011f1038-2823-462e-90de-f33451554f03.csv  01223e8a-8a08-4012-93ef-4af126db10f9.csv  012d6e0a-fb49-4390-bd70-b245a5482697.csv  0133d545-2e5f-496e-af19-5355261d666f.csv  01476835-b5ed-4206-b599-88ac9128956c.csv  0171adad-9318-4a48-b004-35ed98fc4ccf.csv  01778ad8-9dd0-402f-80e7-e24763263198.csv  018a59f4-7f3e-43af-b404-5d4754eedaf9.csv  0197cf68-02b4-4ecc-ac4d-8058f45a76f1.csv  019a8475-af9d-44e4-8df6-151f7764aee0.csv  019fddd4-a4ba-4564-90f7-430d0205eea4.csv  01a0be14-93f1-4f85-b9e7-16eabe05ea9b.csv  01aaa63e-89fe-4e66-a888-634c3a3be7f6.csv  01c1e96a-c926-4ace-88fa-7eb54f74db09.csv  01cd1dfa-2f41-4987-9f5c-a6f408590d4f.csv  01d6cc17-a91d-4995-83cf-e886634f0424.csv  01d75534-0c04-467d-acf9-c1f8ab0e00af.csv  01d9dbe1-6963-4797-a8ca-0e2980420f9b.csv  01e60e61-5623-4971-88f2-af86866e6b22.csv  01f518e9-0cd7-45c5-ab51-d966515a6a39.csv  01f77d6a-daf7-4ef6-8f44-a7b5fff05d60.csv  01fa8d7c-f324-4469-91f3-0caecb766a98.csv  0202a34b-119a-4381-b9d2-2d3dcc79a5dc.csv  020e0323-8653-4911-b9da-56f1fb9cd30d.csv  0214ca79-6742-4d9f-bd4d-e2fd9db8ba73.csv  022049ee-73e9-4bdd-9a76-e580d7bd535a.csv  022271cc-de5e-483d-8a2f-3d46a2aa1311.csv  (+5318 more)
results/data/fips2/: 0016643fed9a4201ba8c74777accdc7e-result.txt  002cb478456041e3884fef821a6fdf1f-result.txt  005b348f0245406999f7cc8df10e1111-result.txt  0061a49038e0438683d9ec8ce1dbff74-result.txt  0087fa6456b447a7b64d89f233c3b93f-result.txt  00b35d3f727f46d49e0b6b6fc8968e18-result.txt  00d192e57d0a453882d6b78ab87affc1-result.txt  00f3780ca95c433c868d734116831706-result.txt  00f741ac589f4750923170ec73c42ae0-result.txt  0166697197a940508fb6fd3ae94822cc-result.txt  01713c5d53a4497985db1a78bd5c50a7-result.txt  0185f34aa089403dac27318dfb99eebd-result.txt  01c4af4391f94bce9a7597713618ec7f-result.txt  0216d2bc8b5f4ae6a8f16739dfa98816-result.txt  0239474dd29a4cb1976a022c2988dedb-result.txt  02461424176d4cb5bf5b2262b20a47d0-result.txt  02557ca0881945f4bce2c97dac535f04-result.txt  (+1646 more)
results/data/fips3/: 1799315  (+7 more)
results/sf2b-fips-posix-short/: out.fips  out.fips.drop  out.fips.drop.2.csv  out.fips.drop.3.csv  out.fips.drop.csv  out.fips.pass  out.fips.pass.2.csv  out.fips.pass.3.csv  out.fips.pass.csv  out.fips_syslog.drop  out.fips_syslog.drop.3.csv  out.fips_syslog.pass  out.fips_syslog.pass.3.csv  out.posix  out.posix.drop  out.posix.drop.2.csv  out.posix.drop.3.csv  out.posix.drop.csv  out.posix.pass  out.posix.pass.2.csv  out.posix.pass.3.csv  out.posix.pass.csv  out.test  run.py
src/: CMakeLists.txt  README.md
src/cmdline_prog/: CMakeLists.txt  Makefile  xdp_ddos01_blacklist_cmdline.c  xdp_ddos01_blacklist_common.h  xdp_ddos01_blacklist_savestats.c  xdp_ddos01_blacklist_subnet_cmdline.c
src/deprecated/: ip_hashtable.c  simplefail2ban.c  simplefail2ban_signer.c  spooky-c.c
src/ebpf-helpers/: ebpf_cmdline  ebpf_loader  ebpf_savestats
src/fail2ban-config/: jail.local  udp-testsvr.conf
src/htb/: CMakeLists.txt
src/ips-action/: CMakeLists.txt  batch_tester.cc  blacklist_adapter.h  client.cc  client_implementation.cc  client_implementation.h  client_wrapper.cc  client_wrapper.h  common.h  intervention.proto  local-ip-manager.cc  server.cc  wrapped_batch_tester.c  wrapped_test_client.c
src/lib/: CMakeLists.txt  Makefile  cmake_install.cmake  ebpf_utils.c  fips_buf.c  ip_blacklist.bpf.c  ip_hashtable.c  ip_llist.c  ip_to_str.c  shm_ringbuf.c  syslog.c  uring_getline.c
src/lib/include/: ebpf_utils.h  fips_buf.h  fips_syslog.h  io_ipc.h  ip_llist.h  ip_to_str.h  shm_ringbuf.h  uring_getline.h
src/programs/: CMakeLists.txt  Makefile  bench.sh  benchmark.c  benchmark.h  benchmark_fips_buf.c  benchmark_shm_buf.c  burn.c  iplist_hashmap_test.c  nsyslog.c  shm_reader.c  simplelogstash.c  test_fips_buf_consumer.c  test_fips_buf_counter.c  test_fips_buf_producer.c  udp_server.c
src/programs/sf2b/: CMakeLists.txt  binary.c  disk.c  fips_buf.c  grpc.c  hs.c  main.c  posix_io.c  shmrbuf.c  simplefail2ban.h  string.c
src/utilities/: CMakeLists.txt  hashfunc_benchmark.c  ip_string_benchmark.c  poll_rbuf.c
(+5750 files in other folders)
